--- a/examples/js_2/index.html
+++ b/examples/js_2/index.html
@@ -5,13 +5,14 @@
     <title>JS</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <!-- <link href="css/style.css" rel="stylesheet"> -->
     <script src="main.js"></script>
 </head>
 
 <body>
-    <p>Abu juhu</p>
+    <p id="text">Abu juhu</p>
     <button onclick="alertFunction();">Click me to open alert</button>
+    <button onclick="changeText();">Change</button>
 </body>
 
 </html>
