--- a/examples/js_2/index.html
+++ b/examples/js_2/index.html
@@ -13,6 +13,9 @@
     <p id="text">Abu juhu</p>
     <button onclick="alertFunction();">Click me to open alert</button>
     <button onclick="changeText();">Change</button>
+    <button onclick="changeText2();">Change2</button>
+    <button onclick="changeText3();">Change2</button>
+    <button onclick="changeText4();">Change2</button>
 </body>
 
 </html>
