changing syle..playing with js...finish the simple course

--- a/examples/js_2/index.html
+++ b/examples/js_2/index.html
@@ -16,6 +16,11 @@
     <button onclick="changeText2();">Change2</button>
     <button onclick="changeText3();">Change2</button>
     <button onclick="changeText4();">Change2</button>
+
+    <input type="text" name="firstName" value="" placeholder="Enter your name" id="firstName">
+    <input type="text" name="firstName" value="false" id="check" hidden>
+    <p id="name">Your name will display here</p>
+    <button onclick="display()">Display name</button>
 </body>
 
 </html>
