finish html course :repeat:

--- a/examples/html/index.html
+++ b/examples/html/index.html
@@ -8,15 +8,141 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
-    <h1>Header 1: ABU JUHU</h1>
+<body style="background-color:gold;">
+    <h1 style="color: gold; background-color:grey; font-family:impact;">Header 1: ABU JUHU</h1>
     <h2>Header 2: ABU JUHU</h2>
     <h3>Header 3: ABU JUHU</h3>
     <h4>Header 4: ABU JUHU</h4>
     <h5>Header 5: ABU JUHU</h5>
     <h6>Header 6: ABU JUHU</h6>
 
-    <p>Paragraph :ABU JUHU</p>
+    <p>Paragraph: ABU JUHU</p>
+
+    <p>text style
+        <i>
+            <u>
+                <b>juhu</b>
+                juhu</u>
+            abu</i>
+    </p>
+
+    <a href="http://localhost/github/btt-diplomski/">btt diplosmki</a>
+    <br>
+    <a href="https://www.google.com" target="_blank">
+        <img src="https://yt3.ggpht.com/a-/ACSszfH4rgI-WIVE6ZZqYZK-8oCZyEY_L8-FhvJarA=s900-mo-c-c0xffffffff-rj-k-no" alt="google image"
+            height="250" width="250">
+    </a>
+
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ul>
+
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ol>
+
+    <dl>
+        <dt>
+            <b>Item 1</b>
+        </dt>
+        <dd>
+            <i>Item 1 description</i>
+        </dd>
+        <dt>
+            <b>Item 2</b>
+        </dt>
+        <dd>
+            <i>Item 2 description</i>
+        </dd>
+        <dt>
+            <b>Item 3</b>
+        </dt>
+        <dd>
+            <i>Item 3 description</i>
+        </dd>
+        <dt>
+            <b>Item 4</b>
+        </dt>
+        <dd>
+            <i>Item 4 description</i>
+        </dd>
+        <dt>
+            <b>Item 5</b>
+        </dt>
+        <dd>
+            <i>Item 5 description</i>
+        </dd>
+    </dl>
+
+    <table border="1">
+        <tr>
+            <th colspan="2">Items</th>
+            <th>Items</th>
+            <th colspan="2">Items</th>
+        </tr>
+        <tr>
+            <td>Item 1</td>
+            <td>Item 2</td>
+            <td>Item 3</td>
+            <td>Item 4</td>
+            <td>Item 5</td>
+        </tr>
+        <tr>
+            <td>Item 1</td>
+            <td>Item 2</td>
+            <td>Item 3</td>
+            <td>Item 4</td>
+            <td>Item 5</td>
+        </tr>
+    </table>
+    <form action="#" method="post">
+        <input type="text" placeholder="TEXT" required>
+        <br>
+        <input type="password" name="pass" id="pass" placeholder="PASS" required>
+        <br>
+        <input type="number" name="number" id="number" placeholder="NUM" required>
+        <br>
+        <input type="color" name="color" id="color" placeholder="COLOR" required>
+        <br>
+        <input type="email" name="email" id="email" placeholder="EMAIL" required>
+        <br>
+        <input type="date" name="date" id="date" placeholder="DATE" required>
+        <br>
+        <button>BUTTON</button>
+        <br>
+        <input type="radio" name="radio" id="radio" placeholder="RADIO" required>
+        <br>
+        <input type="checkbox" name="check" id="check" placeholder="CHECK" required>
+        <br>
+        <input type="file" name="file" id="file" placeholder="file" required>
+        <br>
+        <input type="image" src="https://yt3.ggpht.com/a-/ACSszfH4rgI-WIVE6ZZqYZK-8oCZyEY_L8-FhvJarA=s900-mo-c-c0xffffffff-rj-k-no"
+            alt="google image" height="50" width="50">
+        <br>
+        <input type="range" name="range" id="range" placeholder="range">
+        <br>
+        <input type="month" name="month" id="month" required>
+        <br>
+        <input type="search" name="search" id="search" placeholder="SEARCH" required>
+        <br>
+        <input type="time" name="time" id="time" placeholder="time" required>
+        <br>
+        <input type="url" name="url" id="url" placeholder="URL" required>
+        <br>
+        <input type="week" name="week" id="week" placeholder="WEEK" required>
+        <br>
+        <input type="submit" value="SUBMIT">
+        <br>
+        <input type="reset" value="RESET">
+    </form>
 </body>
 
 </html>
