finish css course :repeat:

--- a/examples/css/index.html
+++ b/examples/css/index.html
@@ -11,7 +11,19 @@
 </head>
 
 <body>
-    <p style="color: gold; background-color: green; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 50px;">Abu juhu</p>
+    <h1>Abu juhu</h1>
+
+    <ul>
+        <li class="active">Home</li>
+        <li>About</li>
+        <li>Contact</li>
+    </ul>
+
+    <p id="first">Juhu abu</p>
+    <p id="second">abu juhu</p>
+
+    <p class="par">Abu juhu</p>
+    <p class="par">Abu juhu</p>
 </body>
 
 </html>
