Advanced types finished

--- a/typescript/classes-interfaces/index.html
+++ b/typescript/classes-interfaces/index.html
@@ -9,7 +9,10 @@
 
 <body>
 
-  <script src="dist/app.js" defer></script>
+  <!-- FOR TYPE CASTING -->
+  <input type="text" id="user-input">
+
+  <script src="dist/advanced/app.js" defer></script>
 </body>
 
 </html>
