Installed, modules and controllers

--- a/typescript/classes-interfaces/index.html
+++ b/typescript/classes-interfaces/index.html
@@ -10,9 +10,9 @@
 <body>
 
   <!-- FOR TYPE CASTING -->
-  <input type="text" id="user-input">
+  <!-- <input type="text" id="user-input"> -->
 
-  <script src="dist/advanced/app.js" defer></script>
+  <script src="dist/generics/app.js" defer></script>
 </body>
 
 </html>
